NetBSD Problem Report #42223

From www@NetBSD.org  Sat Oct 24 18:11:46 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B019E63B902
	for <gnats-bugs@gnats.netbsd.org>; Sat, 24 Oct 2009 18:11:46 +0000 (UTC)
Message-Id: <20091024181146.8423A63B8B6@www.NetBSD.org>
Date: Sat, 24 Oct 2009 18:11:46 +0000 (UTC)
From: tnn@NetBSD.org
Reply-To: tnn@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: pkg_add(8) error reporting could be improved
X-Send-Pr-Version: www-1.0

>Number:         42223
>Category:       pkg
>Synopsis:       pkg_add(8) error reporting could be improved
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    joerg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Oct 24 18:15:01 +0000 2009
>Closed-Date:    Sat Feb 20 04:40:20 +0000 2010
>Last-Modified:  Sat Feb 20 04:45:05 +0000 2010
>Originator:     Tobias Nygren
>Release:        5.99.20
>Organization:
NetBSD
>Environment:
>Description:
When pkg_add'ing a large number of packages on the command line and one package fails, there is no indication of which one(s) failed.

>How-To-Repeat:
# /usr/sbin/pkg_add -V
20091015
# /usr/sbin/pkg_add digest-20080510.tgz brokenpkg-0.1.tgz
pkg_add: Premature end of archive
pkg_add: 1 package addition failed

>Fix:
1) send cake to joerg
2) ???
3) profit!

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: pkg-manager->joerg
Responsible-Changed-By: asau@NetBSD.org
Responsible-Changed-When: Sat, 24 Oct 2009 18:38:23 +0000
Responsible-Changed-Why:
Joerg's cake.


State-Changed-From-To: open->closed
State-Changed-By: joerg@NetBSD.org
State-Changed-When: Sat, 20 Feb 2010 04:40:20 +0000
State-Changed-Why:
Fixed.


From: Joerg Sonnenberger <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42223 CVS commit: pkgsrc/pkgtools/pkg_install/files
Date: Sat, 20 Feb 2010 04:40:03 +0000

 Module Name:	pkgsrc
 Committed By:	joerg
 Date:		Sat Feb 20 04:40:03 UTC 2010

 Modified Files:
 	pkgsrc/pkgtools/pkg_install/files/add: perform.c
 	pkgsrc/pkgtools/pkg_install/files/admin: main.c
 	pkgsrc/pkgtools/pkg_install/files/info: perform.c
 	pkgsrc/pkgtools/pkg_install/files/lib: lib.h pkg_io.c pkg_signature.c
 	    version.h

 Log Message:
 pkg_install-20100220:
 Try harder to give the user an idea which file failed.
 Addresses PR 42223.


 To generate a diff of this commit:
 cvs rdiff -u -r1.94 -r1.95 pkgsrc/pkgtools/pkg_install/files/add/perform.c
 cvs rdiff -u -r1.59 -r1.60 pkgsrc/pkgtools/pkg_install/files/admin/main.c
 cvs rdiff -u -r1.60 -r1.61 pkgsrc/pkgtools/pkg_install/files/info/perform.c
 cvs rdiff -u -r1.61 -r1.62 pkgsrc/pkgtools/pkg_install/files/lib/lib.h
 cvs rdiff -u -r1.9 -r1.10 pkgsrc/pkgtools/pkg_install/files/lib/pkg_io.c \
     pkgsrc/pkgtools/pkg_install/files/lib/pkg_signature.c
 cvs rdiff -u -r1.150 -r1.151 pkgsrc/pkgtools/pkg_install/files/lib/version.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Joerg Sonnenberger <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42223 CVS commit: src/external/bsd/pkg_install/dist
Date: Sat, 20 Feb 2010 04:42:00 +0000

 Module Name:	src
 Committed By:	joerg
 Date:		Sat Feb 20 04:42:00 UTC 2010

 Update of /cvsroot/src/external/bsd/pkg_install/dist
 In directory ivanova.netbsd.org:/tmp/cvs-serv10033

 Log Message:
 nstall-20100220:
 Try harder to give the user an idea which file failed.
 Addresses PR 42223.

 Status:

 Vendor Tag:	PKGSRC
 Release Tags:	pkg_install-20100220

 U src/external/bsd/pkg_install/dist/add/add.h
 U src/external/bsd/pkg_install/dist/add/main.c
 U src/external/bsd/pkg_install/dist/add/perform.c
 U src/external/bsd/pkg_install/dist/add/pkg_add.1
 U src/external/bsd/pkg_install/dist/admin/audit.c
 U src/external/bsd/pkg_install/dist/admin/admin.h
 U src/external/bsd/pkg_install/dist/admin/audit-packages.sh.in
 U src/external/bsd/pkg_install/dist/admin/check.c
 U src/external/bsd/pkg_install/dist/admin/main.c
 U src/external/bsd/pkg_install/dist/admin/download-vulnerability-list.sh.in
 U src/external/bsd/pkg_install/dist/admin/pkg_admin.1
 U src/external/bsd/pkg_install/dist/bpm/bpm.1
 U src/external/bsd/pkg_install/dist/bpm/bpm.sh.in
 U src/external/bsd/pkg_install/dist/create/build.c
 U src/external/bsd/pkg_install/dist/create/create.h
 U src/external/bsd/pkg_install/dist/create/main.c
 U src/external/bsd/pkg_install/dist/create/perform.c
 U src/external/bsd/pkg_install/dist/create/pl.c
 U src/external/bsd/pkg_install/dist/create/pkg_create.1
 U src/external/bsd/pkg_install/dist/create/util.c
 U src/external/bsd/pkg_install/dist/delete/pkg_delete.1
 U src/external/bsd/pkg_install/dist/delete/pkg_delete.c
 U src/external/bsd/pkg_install/dist/info/info.h
 U src/external/bsd/pkg_install/dist/info/main.c
 U src/external/bsd/pkg_install/dist/info/perform.c
 U src/external/bsd/pkg_install/dist/info/pkg_info.1
 U src/external/bsd/pkg_install/dist/info/show.c
 U src/external/bsd/pkg_install/dist/lib/automatic.c
 U src/external/bsd/pkg_install/dist/lib/config.h.in
 U src/external/bsd/pkg_install/dist/lib/conflicts.c
 U src/external/bsd/pkg_install/dist/lib/decompress.c
 U src/external/bsd/pkg_install/dist/lib/defs.h
 U src/external/bsd/pkg_install/dist/lib/dewey.c
 U src/external/bsd/pkg_install/dist/lib/dewey.h
 U src/external/bsd/pkg_install/dist/lib/fexec.c
 U src/external/bsd/pkg_install/dist/lib/file.c
 U src/external/bsd/pkg_install/dist/lib/global.c
 U src/external/bsd/pkg_install/dist/lib/gpgsig.c
 U src/external/bsd/pkg_install/dist/lib/iterate.c
 C src/external/bsd/pkg_install/dist/lib/lib.h
 U src/external/bsd/pkg_install/dist/lib/license.c
 U src/external/bsd/pkg_install/dist/lib/lpkg.c
 U src/external/bsd/pkg_install/dist/lib/opattern.c
 U src/external/bsd/pkg_install/dist/lib/parse-config.c
 U src/external/bsd/pkg_install/dist/lib/pkcs7.c
 U src/external/bsd/pkg_install/dist/lib/pkg_install.conf.5.in
 U src/external/bsd/pkg_install/dist/lib/pkg_io.c
 U src/external/bsd/pkg_install/dist/lib/pkg_signature.c
 U src/external/bsd/pkg_install/dist/lib/pkg_summary.5
 U src/external/bsd/pkg_install/dist/lib/pkgdb.c
 U src/external/bsd/pkg_install/dist/lib/pkgsrc.7
 C src/external/bsd/pkg_install/dist/lib/version.h
 U src/external/bsd/pkg_install/dist/lib/plist.c
 U src/external/bsd/pkg_install/dist/lib/remove.c
 U src/external/bsd/pkg_install/dist/lib/str.c
 U src/external/bsd/pkg_install/dist/lib/var.c
 U src/external/bsd/pkg_install/dist/lib/version.c
 U src/external/bsd/pkg_install/dist/lib/vulnerabilities-file.c
 U src/external/bsd/pkg_install/dist/lib/xwrapper.c
 U src/external/bsd/pkg_install/dist/x509/pkgsrc.cnf
 U src/external/bsd/pkg_install/dist/x509/pkgsrc.sh
 U src/external/bsd/pkg_install/dist/x509/signing.txt

 2 conflicts created by this import.
 Use the following command to help the merge:

 	cvs checkout -jPKGSRC:yesterday -jPKGSRC src/external/bsd/pkg_install/dist

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.