nstall-20100220: Try harder to give the user an idea which file failed. Addresses PR 42223.